# reachy-lobes

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/assign-to-workforce/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current_plan
.devague/frames/: reachy-listen-goes-sdk-first-it-uses-the-reachy-sd.json  reachy-mini-reacts-to-what-it-sees-a-lightweight-o.json
.devague/plans/: reachy-listen-goes-sdk-first-it-uses-the-reachy-sd.json  reachy-mini-reacts-to-what-it-sees-a-lightweight-o.json
.eidetic/memory/: reachy-mini-cli__public.jsonl
.github/workflows/: publish.yml  tests.yml
docs/: adr-0001-sdk-transport-extra.md  export-schema.md  operating-reachy.md  skill-sources.md
docs/deliveries/: 2026-07-16-harmonic-voice.md  2026-07-17-agent-cognition-tool-use-senses-behavior-stash.md
docs/plans/: 2026-06-06-reachy-listen-goes-sdk-first-it-uses-the-reachy-sd.md  2026-06-09-reachy-mini-reacts-to-what-it-sees-a-lightweight-o.md  2026-06-10-reachy-mini-cli-can-think-and-speak-a-say-pipeline.md  2026-06-10-reachy-mini-now-thinks-with-its-body-while-think-c.md  2026-06-11-reachy-mini-cli-now-drifts-off-to-sleep-when-nothi.md  2026-06-11-reachy-mini-now-feels-your-touch-scratch-its-head.md  2026-06-12-reachy-mini-cli-s-sleep-mode-now-wakes-by-touch-wh.md  2026-06-14-reachy-mini-cli-can-export-its-thinking-message-an.md  2026-06-20-one-cli-service-setup-makes-reachy-mini-wake-itsel.md  2026-06-21-reachy-mini-s-live-hearing-now-knows-when-you-re-t.md  2026-06-21-reachy-mini-s-live-thinking-now-hears-words-listen.md  2026-07-16-harmonic-voice.md  2026-07-17-agent-cognition-tool-use-senses-behavior-stash.md  2026-07-17-agent-senses-poses-durable-speech-issues-66-67-68.md  2026-07-17-event-based-senses-pipeline.md
docs/specs/: 2026-06-06-reachy-listen-goes-sdk-first-it-uses-the-reachy-sd.md  2026-06-09-reachy-mini-reacts-to-what-it-sees-a-lightweight-o.md  2026-06-10-reachy-mini-cli-can-think-and-speak-a-say-pipeline.md  2026-06-10-reachy-mini-now-feels-your-touch-scratch-its-head.md  2026-06-10-reachy-mini-now-thinks-with-its-body-while-think-c.md  2026-06-11-reachy-mini-cli-now-drifts-off-to-sleep-when-nothi.md  2026-06-12-reachy-mini-cli-s-sleep-mode-now-wakes-by-touch-wh.md  2026-06-14-reachy-mini-cli-can-export-its-thinking-message-an.md  2026-06-15-reachy-mini-cli-now-ships-a-coherent-operating-gui.md  2026-06-20-one-cli-service-setup-makes-reachy-mini-wake-itsel.md  2026-06-21-reachy-mini-s-live-hearing-now-knows-when-you-re-t.md  2026-06-21-reachy-mini-s-live-thinking-now-hears-words-listen.md  2026-07-16-harmonic-voice.md  2026-07-17-agent-cognition-tool-use-senses-behavior-stash.md  2026-07-17-agent-senses-poses-durable-speech-issues-66-67-68.md  2026-07-17-event-based-senses-pipeline.md
docs/verification/: think-body-expression.md
packaging/reachy-cli/: README.md  pyproject.toml
reachy/: __init__.py  __main__.py  alive.py  daemon.py  demo_config.py  demo_service.py  looputil.py  senselog.py
reachy/behavior/: __init__.py  arbitration.py  control.py  engine.py  library.py  model.py  sense.py  supervisor.py
reachy/cli/: __init__.py  _errors.py  _export.py  _logging.py  _output.py
reachy/cli/_commands/: _robot.py  app.py  behavior.py  cli.py  daemon.py  demo_mode.py  device.py  doctor.py  explain.py  learn.py  listen.py  move.py  overview.py  pat.py  quickstart.py  say.py  service.py  sleep.py  (+3 more)
reachy/explain/: __init__.py  catalog.py
reachy/export/: __init__.py  blocks.py  events.py  exporter.py
reachy/forge/: __init__.py  activate.py  client.py  lifecycle.py  validator.py
reachy/motion/: __init__.py  expression.py  idle.py  listen.py  listen_face.py  listen_hooks.py  listen_pat.py  listen_scene.py  listen_sleep.py  listen_think.py  listen_transcribe.py  listen_vision.py  pat.py  pat_reaction.py  pat_signal.py  queue.py  sense_sample.py  server.py  sleep.py  sleep_signal.py  snap.py  supervisor.py
reachy/robot/: __init__.py  http_transport.py  sdk_transport.py  transport.py
reachy/service/: __init__.py  manager.py  units.py
reachy/sleep/: __init__.py  patwake.py  state.py  stimulus.py  supervisor.py  wake.py  wakeword.py
reachy/speech/: __init__.py  agent_turn.py  cognition.py  cognition_signal.py  distinctness.py  engagement.py  events.py  expressions.py  expressions.toml  harmonic.py  llm.py  markers.py  name_match.py  playback.py  stt.py  supervisor.py  tools.py  tts.py  voice.py
reachy/stash/: __init__.py  apply.py  embeddings.py  record.py  store.py
reachy/vision/: __init__.py  face.py  face_store.py  light.py  motion.py  producer.py  scene.py  supervisor.py
reachy_lobes/: __init__.py  __main__.py
reachy_lobes/cli/: __init__.py  _errors.py  _output.py
reachy_lobes/explain/: __init__.py  catalog.py
scripts/: camera_soak.py  face_enroll.py
tests/: test_agent_turn.py  test_agent_turn_cortex_integration.py  test_behavior.py  test_cli.py  test_cli_introspection.py  test_cli_logging.py  test_cli_pat.py  test_cli_service.py  test_cli_vision.py  test_cognition_audio_optional.py  test_cognition_export.py  test_cognition_expression.py  test_cognition_signal.py  test_daemon.py  test_demo_config.py  test_demo_mode.py  test_demo_service.py  test_dependencies.py  test_distinctness.py  test_engagement.py  test_engagement_heuristic.py  test_export_blocks.py  test_export_cli_helper.py  test_export_decoupling.py  test_export_events.py  test_export_exporter.py  test_expression_producer.py  test_expressions.py  test_forge_activate.py  test_forge_client.py  test_forge_lifecycle.py  test_forge_validator.py  test_harmonic.py  test_idle_focused.py  test_listen_acceptance.py  test_listen_cli.py  test_listen_cognition_agent.py  test_listen_direction_invariants.py  test_listen_export.py  test_listen_face.py  (+73 more)
tests/fixtures/: __init__.py  engagement_transcripts.py
(+8 files in other folders)
