[project]
name = "reachy-mini-cli"
version = "0.13.0"
description = "Agent and CLI for operating the Reachy Mini expressive robot — device setup, app management, and runtime ops."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = ["numpy>=1.24"]

# SDK-first design, installability-aware: `numpy` (the RMS loudness detector) is a base
# dependency — it is a pure wheel that installs everywhere. `reachy-mini` (the SDK + daemon
# binary) is the DEFAULT `listen` transport but stays an *extra*, because its transitive
# stack (pycairo / gstreamer / pyaudio) needs system libraries that aren't present on a bare
# box or in CI. So the recommended install is `pip install 'reachy-mini-cli[daemon]'` (or
# `[sdk]`), which the README documents; a bare `pip install reachy-mini-cli` gives the HTTP remote
# profile, and running the SDK transport without the extra raises a clean CliError pointing
# at `[sdk]`. (See the `version-check`/CI note: a hard reachy-mini base dep breaks `uv sync`
# on the cairo build.)
#
# `[daemon]` signals "I need the reachy-mini-daemon binary" and `[sdk]` signals "I need the
# in-process SDK client" — both resolve to the same reachy-mini wheel.
[project.optional-dependencies]
daemon = ["reachy-mini>=1.0"]
sdk = ["reachy-mini>=1.0"]

[project.urls]
Homepage = "https://github.com/agentculture/reachy-mini-cli"
Issues = "https://github.com/agentculture/reachy-mini-cli/issues"

[project.scripts]
reachy = "reachy.cli:main"
reachy-mini-cli = "reachy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reachy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "teken>=0.8",
]

[tool.coverage.run]
source = ["reachy"]
omit = ["reachy/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["reachy"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
